<resources>
    <string name="app_name">BingOpad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="romance_satu_1">
        Seperti biasanya, di hari Valentine selalu diwarnai dengan bunga mawar dan cokelat.
        Kali ini seorang pria datang terburu-buru di tengah hujan demi kekasihnya tercinta.
    </string>
    <string name="romance_satu_2">
        Tahu bahwa ia terlambat dan hujan keburu turun, iapun meminta maaf pada kekasihnya yang terlihat cemberut.
        Hari itu mereka berencana makan malam berdua, persis seperti yang diinginkan si wanita di film-film yang ditontonnya.
    </string>
    <string name="romance_satu_3">
        Wanita itu lupa, bahwa romantisme bukan sekedar meniru adegan di film saja, yang terkadang justru tidak nyata.
        Ia juga lupa, bahwa sebenarnya romantis itu datang dari berbagai cara, seperti yang dibawa oleh kekasihnya.
    </string>
    <string name="horror_empat_1">
        “Tidak!! hentikaan!!!”. aku berteriak berharap teriakanku dapat mengubah sesuatu, tapi sudah terlambat.
        Jleb!! Wening menusuk jantung haidar menggunakan pisau yang sudah berlumuran darah di tangannya.
        Air matanya menetes tak berhenti ia sadar akan hal yang dilakukannya tapi tubuhnya tak bisa dikendalikannya.
        ‘Merri’ sudah menguasai seluruh anggota tubuhnya, hanya saja tidak dengan perasaannya.
    </string>
    <string name="horror_empat_2">
        Haidar terjatuh, jantungnya terlepas dari bilah pisau yang digenggam wening.
        Darahnya mengalir membanjiri lantai. Air mata Wening semakin deras menunjukkan penderitaan yang dialaminya saat ini.
        Semua hal tragis itu membuat Merri semakin girang. Dia tertawa terbahak bahak menikmati suasana yang diciptakannya.
    </string>
    <string name="horror_empat_3">
        Wening mengambil kesempatan dari peristiwa itu.
        Dia melepas kendali Merri dan menikam dirinya sendiri dengan pisau yang telah dilumuri darah kekasihnya, kemudian tewas.
    </string>
    <string name="horror_empat_4">
        Roh merri tertarik masuk ke dalam gaun pengantin yang dikenakan wening, disini, aku bagaikan seorang penonton dari sebuah film yang amat menyayat hati.
    </string>
    <string name="horror_empat_5">
        Suara hujan memenuhi seluruh ruangan. Langit seolah ikut menangis menyaksikan peristiwa tragis yang dialami wening.
        Aku bersalah. Andaikan aku menghentikannya memakai gaun pengantin misterius itu, Merri takkan mengambil alih tubuhnya dan membunuh semua orang yang disayanginya.
    </string>
    <string name="horror_empat_6">
        Aku mengambil pisau berlumuran darah itu dari tangan wening.
        Dan menusuk diriku sendiri untuk mengakhiri penyesalan dari kesalahan yang telah kuperbuat.
    </string>
    <string name="horror_empat_7">
        Suara hujan yang deras mulai tak terdengar seiring dengan kesadaranku. Kurasa aku akan mati.
    </string>
    <string name="horror_enam_1">
        Angin dingin yang berhembus kencang membuat seluruh tubuh ini terasa beku.
        Sepinya suasana membuat aku terpaku seorang diri. Sudah berapa lama aku melangkah, sudah berapa jauh aku berjalan… Hanya suara jangkrik yang kudengar.
    </string>
    <string name="horror_enam_2">
        Dimana aku… Mengapa aku ada di tempat seperti ini…, aku hanya samar mengingatnya. Aku ingin pulang!
    </string>
    <string name="horror_enam_3">
        Tiba-tiba tengkukku terasa dingin ketika sesuatu melintas tepat di atas kepalaku.
        Jantungku serasa berhenti berdetak ketika kulihat sosok menakutkan yang biasanya hanya kulihat dalam film bioskop.
    </string>
    <string name="horror_enam_4">
        “Hei,… Kau baru ya?”, sapanya dengan suara sengau dan parau. Lebih seram dari yang ada di film.
        Hampir aku melompat karena takut ketika wajahnya tepat di depan mukaku.
    </string>
    <string name="horror_enam_5">
        “Hahahaha… Ada yaaa, makhluk halus takut juga sama makhluk halus lainnya!” ujarnya membuatku terpaku.
        Makhluk seram itu kembali terbang meninggalkan aku sendiri yang diam mematung dengan tubuh gemetar tak karuan.
        Mimpikah aku? Ada apa dengan diriku? Mengapa aku seperti sedang berada di hutan luas tak berujung…?
    </string>
    <string name="horror_enam_6">
        Airmataku meleleh tanpa terasa. Antara bingung dan takut…, kulanjutkan perjalanan ini.
        Aku ingin pulang! “Mamah, papah, dimana kalian? Kak Roy, kak Gio… Kalian dimana? Tolong aku…!! Kawan-kawanku, kalian dimana??”
    </string>
    <string name="horror_enam_7">
        Jalanan ini tak kuketahui. Arah kemana lagi harus kulewati. “Mamaaah!! Papaaah!!! Dimana kalian???”
        Aku teriak. Berharap akan datang seseorang yang menolongku. Tapi hanya suara angin yang menggoyangkan dedaunan pohon-pohon sepanjang jalan ini.
    </string>
    <string name="horror_enam_8">
        Ada lima anak kecil berkepala plontos berlarian melewatiku begitu cepat. Tawanya menyakitkan telinga. Dan mereka pun seolah tak peduli padaku.
        Lalu ada sepasang kakek nenek berbaring di pinggir jalan. Tubuh mereka kurus kering hanya tulang terbungkus kulit.
        Tapi matanya merah menyala menatapku tajam. Aku tercekat. Panas dingin tak karuan.
    </string>
    <string name="horror_enam_9">
        “Mau kemana kau, Nak?” sapa sang kakek membuatku seperti tersengat listrik. Lidahku kelu, tak dapat bicara.
        Hanya bibir bergetar dengan airmata berlinang.
        Tapi anehnya aku tidak pingsan. Aku hanya merasakan seperti lemas dan ringan. Bahkan langkahku semakin cepat.
        Kenapa jalanan ini penuh dengan orang-orang yang terlihat menyeramkan.
        Ada saja makhluk yang membuat dadaku seperti berhenti bernafas. Dan syukurnya, mereka hanya melintas atau hanya memandangku begitu saja tanpa ada yang mengusikku.
    </string>
    <string name="horror_enam_10">
        “Mamaaah…!!! Papaaah…!!! Aku takut!!!” rintihku dengan deraian airmata.
        “Berisik!!!”
        Aku meloncat kaget. Sosok hitam besar menghardikku dari balik pohon besar. Tubuhnya penuh bulu.
        Aku menundukkan kepala karena takut melihat mukanya yang seram. Ada seorang anak perempuan dibalik ketiaknya.
    </string>
    <string name="horror_enam_11">
        Langkahku makin cepat. Airmataku semakin deras. Jantungku pun semakin kencang berdetak.
    </string>
    <string name="horror_enam_12">
        Dimana aku…? Aku jatuh terkulai lemas karena dadaku yang sesak.
        Suara-suara aneh berbisik, berteriak bernyanyi… Tertawa dan menjerit membuat bulu kudukku semakin meninggi.
        Tuhaaaan!!! Tolonglah aku Tuhan…
    </string>
    <string name="horror_enam_13">
        Sayup-sayup kudengar samar seperti suara orang mengaji. Lantunan ayat suci membuatku agak tenang.
        Tapi dimana suara itu… Kadang terdengar jelas, kadang menghilang. Terdengar jauh… tapi kadang seperti dekat.
    </string>
    <string name="horror_enam_14">
        Aku berlari mencari arah suara orang mengaji. Setengah histeris berharap ada seseorang yang mau menolongku.
        Mengantarku pulang ke rumah. Bertemu mamah, papah dan kakak-kakak lelakiku.
    </string>
    <string name="horror_enam_15">
        Di ujung jalan kulihat seorang anak perempuan memandangku tak berkedip. Rambutnya yang panjang hampir menyapu jalan mengibas tertiup angin.
        Tuhaaaan…!!! Dunia apa ini?? Aku menjerit histeris. Anak itu terus mengikutiku dari belakang.
    </string>
    <string name="horror_enam_16">
        “Kakak,… jangan panik. Bersyukurlah kakak masih ada yang mengirimkan doa untuk kakak.
        Aku,… Sudah bertahun-tahun berkeliaran di jalan, tak ada yang mendoakan aku. Aku anak yang dibuang orangtua, Kak! kudengar orangtua kakak mengaji, mengirim doa untuk kakak.”
        Anak perempuan itu berkata membuatku terhenyak. Apa maksudnya? Kubalikkan tubuhku kearahnya. Mata nanarnya yang kosong seolah menembus jantungku.
    </string>
    <string name="horror_enam_17">
        “Kakak ingin pulang? Duduklah dengan tenang. Pejamkan mata kakak.
        Ingat akan diri kakak, rumah kakak, keluarga kakak… Maka akan sampai kakak pada tujuan kakak!”
        Aku menatapnya tak kalah tajam. Kuusap airmataku. Aku ingin pulang! Tak mau terus berkeliaran seperti ini.
        Kuikuti petunjuknya. Dengan harapan, aku segera pulang.
    </string>
    <string name="horror_enam_18">
        Kupejamkan mata. Kutenangkan hati. Kubayangkan rumah mungilku yang bersih dan asri.
        Lalu terlintas wajah mamah yang manis dengan pipi cabi-nya. Wajah papah yang penuh dengan jenggot tipis.
        Lalu kakak-kakakku yang baik walau kadang jahil. Airmataku kembali mengalir.
    </string>
    <string name="horror_enam_19">
        Suara orang mengaji seperti ada di depanku. Kubuka mata dan kulihat mereka semua yang tadi kurindukan.
        Banyak orang di rumahku. Seperti sedang ada selametan. Semua para tamu kebanyakan bapak-bapak tetangga sekitar rumah.
    </string>
    <string name="horror_enam_20">
        Kulihat mamah tampak kusam. Wajahnya yang bulat terlihat tirus. Sakitkah mamah?… Airmata mamah mengalir seperti aku.
        Di kumpulan bapak-bapak, kulihat papah. Memakai kopiah hadiah dariku ketika ulang tahunnya sebulan yang lalu. Ada kak Roy, kak Gio… juga ada kak Erin, tunangan kak Roy.
        Merekapun berlinang air mata.
    </string>
    <string name="horror_enam_21">
        Tiba-tiba ada seorang ibu menepuk pundakku. Dia menatapku tak percaya. Mata bulatnya seolah hendak melompat keluar.
        “Mariska??!?”
        Tiba-tiba ibu itu pingsan hingga suasana menjadi gaduh. Beberapa orang berusaha membopongnya membawa ibu itu ke dalam kamar kak Gio.
    </string>
    <string name="horror_enam_22">
        Lama akhirnya ibu itu siuman. Acara telah selesai. Sebagian orang memilih pulang ke rumah masing-masing, sebagian melanjutkan mengaji Yasin.
        Ibu itu terus menatapku tajam. Ia menganggukkan kepala seolah memanggilku untuk mendekat padanya.
        Aku mendekatinya. Kulihat orang sekitar memandang si ibu seperti tak mengerti gerakan-gerakannya. Malah ada yang berbisik kalau ibu itu kesurupan.
    </string>
    <string name="horror_enam_23">
        Aku ceritakan aku dari mana. Seperti air mengalir, ceritaku begitu lancar dan ingat kejadian apa yang telah aku alami.
        Aku menangis histeris. Aku tak kuat lagi menceritakan peristiwa apa yang aku alami.
    </string>
    <string name="horror_enam_24">
        Malam itu aku pulang dari sekolah.
        Memang tidak seperti biasanya, kali ini aku pulang lewat dari jam 9 malam karena sepulang sekolah jam 5 sore tadi aku ikut Via sahabatku untuk bermain dulu di warnet.
        Aku memang nakal. Kuakui itu dan kini aku sangat menyesalinya. Sudah seminggu ini mamah marah-marah karena aku suka pulang telat.
        Bodohnya aku tidak menghiraukan mamah.
    </string>
    <string name="horror_enam_25">
        Seperti malam itu. Aku pulang jam 9 malam. Sendirian pula.
        Di suatu jalan yang memang sepi dan terkenal rawan, ada beberapa pemuda mabuk berlawanan arah denganku.
        Awalnya aku melangkah cepat dengan sikap cuek. Karena kupikir orang mabuk didorong saja pasti langsung jatuh.
    </string>
    <string name="horror_enam_26">
        Hingga tiba-tiba seorang dari mereka menarik tanganku dan mendekap erat tubuhku. Aku berontak.
        Kusikut tubuh baunya hingga aku terlepas. Tapi ternyata beberapa lainnya memegangi tangan dan kakiku.
        Mereka menyeretku kesemak-semak. Mereka dengan biadabnya merenggut kegadisanku. Bergiliran tanpa rasa iba.
    </string>
    <string name="writer_romance_2">
         Pengarang: Risti Fauziyah
    </string>
    <string name="writer_horror_6">
        Pengarang: Miftahul Jannah
    </string>
    <string name="writer_horror_9">
        Pengarang: Xabiru Oshe
    </string>
</resources>