<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_horror6"
    >
    <ImageView
        android:id="@+id/homeawal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_home_red">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="10dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/writer_horror_9"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_1"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_2"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_3"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_4"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_5"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_6"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_7"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_8"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_9"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_10"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_11"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_12"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_13"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_14"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_15"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_16"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_17"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_18"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_19"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_20"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_21"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_22"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_23"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_24"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_25"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_enam_26"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</LinearLayout>