<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_horror4"
    >
    <ImageView
        android:id="@+id/homeawal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_home_reddd">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="114dp"
        android:layout_marginBottom="10dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/writer_horror_6"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_1"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_2"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_3"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_4"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_5"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_6"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/horror_empat_7"
                    android:paddingBottom="10dp"
                    android:textSize="20sp">
                </TextView>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>