<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_romance_1"
    >
    <ImageButton
        android:id="@+id/homeawal"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_home">

    </ImageButton>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/writer_romance_2"
                    android:textSize="18sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/romance_satu_1"
                    android:textSize="20dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/romance_satu_2"
                    android:textSize="20dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/romance_satu_3"
                    android:textSize="20dp">
                </TextView>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</LinearLayout>